Revamp the website again.

--- a/index.html
+++ b/index.html
@@ -22,130 +22,70 @@
             </ul>
         </nav>
     </header>
+    
     <!-- Main Content (Grid Layout) -->
     <main>
-        <!--Intro-->
-        <section class="bg-1">
-            <h1>Welcome to Hexterika Breaks Free</h1>
-                <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong"/>
-                <p><strong>Hello, I'm Sangsongthong</strong> — a multidisciplinary professional passionate about cybersecurity, design, and digital strategy. This site is both my personal portfolio and the home of my freelance brand, <strong>Hexterika</strong>.</p>
-                <p><strong>Hexterika Breaks Free</strong> began as a space for personal growth and self-liberation, and it has since evolved into a professional identity that brings together creativity, security, and adaptability. It reflects my journey and the future I'm building through technology and design.</p>
-                <p>Recognizing that my specialized skills need more time to polish, I am also open to a role in sales, customer service, tech support, and call center.</p>
-                <p><a href="https://youtu.be/U1vDecmO2lU" target="_blank" rel="noopener noreferrer">My Mock Sales Pitch And Proof Of My Spoken English</a></p>
+
+        <!--Hero Section-->
+        <section>
+            <h1>Aspiring Cybersecurity Specialist | Results-Driven IT Professional</h1>
+            <p class="subtitle">Bringing foundational cybersecurity expertise and a versatile IT skill set to immediate opportunities.</p>
+            <p class="intro-text">With certifications including CompTIA Security+ and CC by ISC2, a year of practical IT Technician experience, and a relentless drive for problem-solving, I'm eager to contribute my dedication to your team.</p>
         </section>
 
-        <!--Core Focuses / Primary Focuses-->
-        <section class="bg-2">
-            <h2>My Primary Focus</h2>
-                <p>My professional path is centered around two main areas that reflect both my passion and evolving expertise:</p>
-                <ul>
-                    <li><strong>Cybersecurity & IT</strong>--<a href="cyberlab.html">Explore Hexterika Cyberlab</a></li>
-                    <li><strong>UX/UI Design</strong>--<a href="designer.html">Visit Hexterika Designer</a></li>
-                </ul>
-                <br>
-                <p>I'm actively pursuing real-world experience in cybersecurity through VDP platforms like Bugcrowd, building on hands-on lab training to prepare for entry-level roles. While continuing to grow in this field, I'm also open to immediate opportunities — remote or relocation-based — in customer support, sales, or call center roles, where my communication skills and tech-savviness can bring value right away. In design, I'm confident in my UX/UI capabilities and currently refining my portfolio to better showcase project outcomes.</p>
+        <!--Primary Focus-->
+        <section>
+            <h2>My Primary Focus: Aspiring Cybersecurity Specialist</h2>
+            <p>My core passion lies in Cybersecurity, backed by CompTIA Security+ and CC by ISC2 certifications. I am actively honing my skills in vulnerability assessment and penetration testing through hands-on learning paths like TryHackMe, dedicated to mastering the art of digital defense.</p>
+            <a href="cyberlab.html" class="button-cta">Explore Hexterika Cyberlab</a>
         </section>
 
-        <!--Soft Skills / Transferrable Skills-->
-        <section class="bg-2">
-            <h2>Transferrable Skills</h2>
-                <p>I bring strong transferrable skills developed through international experience, self-driven learning, and cross-functional roles. I'm adaptable, reliable, and effective in both remote and multicultural environments — strengths shaped in part by my U.S. Exchange Student year (see Education) and applied across support, sales, creative, and technical work.</p>
-            <section class="bg-1">
-                <h3>Core Strengths</h3>
-                    <ul>
-                        <li>Time Management & Prioritization</li>
-                        <li>Remote Work & Cross-Timezone Collaboration</li>
-                        <li>CRM Tools: Salesforce, Zoho CRM</li>
-                        <li>Digital Productivity: Google Workspace, Notion, Microsoft Office</li>
-                        <li>Client Support & Multitasking</li>
-                    </ul>
-            </section>
-            <section class="bg-1">
-                <h3>Languages</h3>
-                    <ul>
-                        <li><strong>Thai:</strong> Native</li>
-                        <li><strong>English:</strong> TOEIC 815 (Listening & Reading), Writing C1, Speaking B1</li>
-                        <li><strong>Romanian, French, Spanish:</strong> Beginner</li>
-                    </ul>
-            </section>
-        </section>
-
-        <!--Secondary Focuses-->
-        <section class="bg-1">
-            <h2>My Secondary Focus</h2>
-            <p>In addition to my primary focus areas, I also apply my skills in:</p>
+        <!--Immediate Contribution-->
+        <section>
+            <h2>Immediate Contributions & Versatile Skills</h2>
+            <p>Beyond my core cybersecurity focus, my adaptable skill set and year of practical experience as an IT Technician provide immediate value. I excel in roles requiring strong problem-solving, meticulous attention to detail, and exceptional client interaction.</p>
+            <p>I am immediately available for remote positions in:</p>
             <ul>
-                <li><strong>Programming</strong>
-                    <ul>
-                        <li>Built this website from scratch</li>
-                        <li>Languages: Python, HTML, CSS, JavaScript, React</li>
-                        <li>Version control with Git & GitHub</li>
-                        <li>Arduino coding (self-taught for university project)</li>
-                    </ul>
-                </li>
-                <li><strong>Social Media Marketing</strong>
-                    <ul>
-                        <li>Certified by Meta in Digital Marketing</li>
-                        <li>Skills: campaign strategy, content creation, performance tracking</li>
-                        <li>Manage Facebook & Instagram for:
-                            <ul>
-                                <li><a href="https://www.facebook.com/share/165WozGYNW/" target="_blank" rel="noopener noreferrer">Hexterika Cyberlab Facebook</a></li>
-                                <li><a href="https://www.instagram.com/hexterika.cyberlab?igsh=cTRoaGxmNGxrcmMz" target="_blank" rel="noopener noreferrer">Hexterika Cyberlab Instagram</a></li>
-                                <li><a href="https://www.facebook.com/share/1AYY5bVfaa" target="_blank" rel="noopener noreferrer">Hexterika Designer Facebook</a></li>
-                                <li><a href="https://www.instagram.com/hexterika.designer?igsh=MW83dXM4aG92amtrNw==" target="_blank" rel="noopener noreferrer">Hexterika Designer Instagram</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
+                <li><strong>IT Support:</strong> Proficient in diagnosing and resolving diverse technical issues, ensuring operational efficiency.</li>
+                <li><strong>Technical Sales:</strong> Leveraging technical understanding to communicate solutions effectively.</li>
+                <li><strong>Customer Service & Call Center:</strong> Committed to providing exceptional service and building positive relationships with a technical edge.</li>
             </ul>
-            <p>These skills support the growth of my Hexterika brand and show my adaptability in the digital space.</p>
+        <p>Discover my full range of <a href="skills.html" class="text-link">technical and soft skills</a> that make me an asset to any team.</p>
         </section>
 
-        <!--Education-->
-        <section class="bg-1">
-            <h2>Education Background</h2>
+        <!--Key Transferable Skills-->
+        <section>
+            <h2>Key Strengths & Adaptability</h2>
+            <p>My diverse background and experiences have equipped me with a robust set of strengths crucial for dynamic environments:</p>
             <ul>
-                <li>
-                    <strong>Bachelor of Sport Science</strong> — Suranaree University of Technology (Thailand)
-                        <ul>
-                            <li>Led an Arduino project for a Sport Tech course — handled planning, coding, and delivery under a tight deadline</li>
-                            <li>Independently began learning Linux and Python as a personal entry point into tech</li>
-                        </ul>
-                </li>
-                <li>
-                    <strong>Exchange Program</strong> — Skyline High School, Colorado, USA
-                        <ul>
-                            <li>Gained real-world English fluency and developed soft skills like adaptability, cross-cultural communication, and problem-solving through full immersion in a U.S. high school environment.</li>
-                        </ul>
-                </li>
+                <li><strong>Analytical & Problem-Solving:</strong> Adept at quickly understanding new systems and methodologies to deliver effective solutions.</li>
+                <li><strong>Exceptional English Communication:</strong> Demonstrated through my TOEIC scores (Writing: C1, Speaking & Reading: B1, Listening: B2) and a year as an exchange student in the U.S. high school system, fostering fluency, adaptability, and cross-cultural communication.</li>
+                <li><strong>Adaptability & Continuous Learning:</strong> Eager to acquire new skills and thrive in fast-paced, evolving settings.</li>
+                <li><strong>Client & Customer Focus:</strong> Committed to providing exceptional service and building positive relationships.</li>
             </ul>
         </section>
 
-        <!--Brand Identity & Call to Action-->
-        <section class="bg-2">
-            <h2>About the Brand</h2>
-            <p>
-                Hexterika is the brand name I created to unite my services under one creative and strategic umbrella. 
-                It represents a professional identity separate from my personal background — reflecting my values, journey, and multidisciplinary work.
-            </p>
-            <p>
-                While Hexterika is my current brand, I also use the alias <strong>Gexter</strong> professionally. 
-                Gexter is a persona I developed independently, blending inspirations from fictional characters. 
-                While both names reflect structure and creativity, Hexterika embodies hope and transformation, while Gexter highlights my more unconventional, curious side.
-            </p>
-            <p>
-                I'm not currently pursuing a legal name change due to the complexity involved, but these names remain meaningful identities for me.
-                In the future, I plan to grow Hexterika Breaks Free into a full company that truly embodies this vision.
-            </p>
-            <p>Interested in working together or exploring what I offer?</p>
+        <!--Relocation To Romania-->
+        <section>
+            <h2>Location & Availability: Remote & Globally Flexible</h2>
+            <p>My <strong>#1 priority</strong> is securing an <strong class="key-statement">immediate remote position</strong> with a forward-thinking organization, <strong class="key-statement">regardless of geographic location</strong>. I am highly adaptable across various time zones and committed to contributing effectively from day one. My goal is to land a role <strong class="key-statement">within a month</strong> to support both my professional journey and personal goals, including a planned relocation to Romania by the end of this year.</p>
+            <p>To provide clear information, I've ranked my priorities. This approach avoids giving the impression that relocation must happen simultaneously with getting hired, which isn't my intention. Relocation can take time, but securing a fully remote role can be much faster.</p>
             <ul>
-                <li><a href="services.html">View My Services</a></li>
-                <li><a href="contact.html">Get in Touch</a></li>
+                <li><strong>#2 Primary Permanent Relocation Goal: Romania.</strong> My strong commitment to establishing my career permanently in Romania is fueled by profound personal motivation and genuine excitement for the local IT and cybersecurity landscape. I am proactively learning Romanian and diligently understanding the relocation process for non-EU citizens.</li>
+                <li><strong>#3 Permanent Relocation Interest: North America (USA & Canada).</strong> I'm very open to permanent relocation to these regions. My prior experience as an exchange student allowed me to build meaningful personal relationships (non-romantic) there, and I'm keen to build my career where the IT and cybersecurity job market aligns with my permanent goals.</li>
+                <li><strong>#4 Permanent Relocation Interest: United Kingdom & Broader Europe.</strong> I am also eager to explore permanent relocation opportunities in these regions to gain valuable international experience within the IT and cybersecurity fields.</li>
             </ul>
         </section>
 
-
+        <!--Next Steps-->
+        <section>
+            <ul>
+                <li><a href="about.html" class="button-cta">View Professional Profile</a></li>
+                <li><a href="contact.html" class="button-cta">Connect With Me</a></li>
+            </ul>
+        </section>
     </main>
+
     <!-- Footer Section -->
     <footer>
         <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
