Revamp index.html and cyberlab.html. Make cyberlab.html strong and up to date.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <!--Hero Section-->
         <section>
             <h1>Aspiring Cybersecurity Specialist | Results-Driven IT Professional</h1>
+            <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong"/>
             <p class="subtitle">Bringing foundational cybersecurity expertise and a versatile IT skill set to immediate opportunities.</p>
             <p class="intro-text">With certifications including CompTIA Security+ and CC by ISC2, a year of practical IT Technician experience, and a relentless drive for problem-solving, I'm eager to contribute my dedication to your team.</p>
         </section>
