Make contact.html more appealing. Add correct info to about.html. I still need to adjust the code readability for both of them and correct the links.

--- a/about.html
+++ b/about.html
@@ -40,36 +40,47 @@
 
         <section class="bg-1">
             <h2>The Spirit of Hexterika: Breaking Free & Building</h2>
-            <p>Hexterika is more than just a name; it embodies my commitment to breaking free from conventional career paths and leveraging my diverse skill set to create value. It represents my entrepreneurial spirit and a belief that a "jack-of-all-trades" can indeed master many things, especially when driven by passion and a thirst for continuous improvement.</p>
-            <p>While **Hexterika Cyberlab** (my dedicated IT & Cybersecurity portfolio) is my primary focus, Hexterika as a whole encompasses a broader range of professional skills. This includes a keen interest in **Figma UX/UI Design** and **social media marketing**, which I continuously hone. These complementary abilities empower me to approach problems with a more holistic perspective, understand user needs, and effectively communicate technical solutions.</p>
-            <p>My long-term vision for Hexterika is to build a platform where these diverse talents converge, offering unique and comprehensive services. It's a journey of continuous learning, adaptation, and proactive problem-solving, all aimed at creating meaningful impact.</p>
+            <p>Hexterika is more than just a name; it embodies a deeply personal journey—a **yearning for freedom**, a **firm decision to break free**, and an unwavering **commitment to pursuing a self-designed path**. It represents a deliberate departure from conventional norms that often dictate what one "should" pursue. Instead, Hexterika is about passionately embracing diverse interests and skills, knowing that each one contributes to building a resilient and fulfilling professional life.</p>
+            <p>My philosophy is that by gaining proficiency in what I am passionate about, I can forge a career that truly resonates. Some of these skills, like my focus in **IT and Cybersecurity through Hexterika Cyberlab**, are being cultivated to become cornerstones of my stable career. Others, including my interests in **Figma UX/UI Design** and **social media marketing**, serve as valuable complementary skills that open doors to diverse opportunities, whether as primary roles or as dynamic side hustles. Regardless of their role, each skill and endeavor under the Hexterika umbrella contributes to a holistic and adaptable professional identity, reflecting my commitment to continuous growth and self-determination.</p>
+            <p>This spirit of breaking free and building on my own terms extends beyond just career aspects; it's a foundational principle applied to all facets of my life, driving both my professional pursuits and personal aspirations.</p>
         </section>
 
         <section class="bg-2">
             <h2>Education</h2>
             <div class="education-item">
-                <h4>[Your Degree/Program Name]</h4>
-                <p><strong>[Your University/Institution Name]</strong> - [City, Country]</p>
-                <p>[Start Date] – [End Date]</p>
-                <p>[Optional: Briefly mention relevant coursework, projects, or honors]</p>
+                <h4>Bachelor of Sport Science</h4>
+                <p><strong>Suranaree University of Technology</strong> - Nakhon Ratchasima, Thailand</p>
+                <p>July 2016 - March 2020</p>
+                <p>Relevant Information:</p>
+                <ul>
+                    <li>Led an Arduino project for a Sport Tech course — handled planning, coding, and delivery under a tight deadline</li>
+                    <li>Independently began learning Linux and Python as a personal entry point into tech</li>
+                </ul>
+            </div>
+
+            <div class="education-item">
+                <h4>Exchange Program</h4>
+                <p><strong>Skyline High School</strong> - Colorado, USA</p>
+                <p>August 2011 - May 2012</p>
+                <p>Relevant Information:</p>
+                <ul>
+                    <li>Gained real-world English fluency and developed soft skills like adaptability, cross-cultural communication, and problem-solving through full immersion in a U.S. high school environment.</li>
+                </ul>
             </div>
         </section>
 
         <section class="bg-1">
             <h2>Personal Interests & Global Outlook</h2>
             <p>Beyond the professional, I am a global citizen with a passion for understanding diverse cultures and experiences. My time as an exchange student in the U.S. deeply enriched my communication skills and adaptability. I'm actively learning Romanian and planning a permanent relocation to Romania, driven by both personal aspirations and a keen interest in its growing IT and cybersecurity landscape. I'm also open to opportunities across North America, the UK, and broader Europe, always eager to embrace new challenges and environments.</p>
-            <p>My journey is about continuous growth, both professionally and personally, and I’m excited about the opportunities to contribute to dynamic teams and solve complex problems on a global scale.</p>
+            <p>My journey is about continuous growth, both professionally and personally, and I'm excited about the opportunities to contribute to dynamic teams and solve complex problems on a global scale.</p>
         </section>
 
         <section class="bg-2">
-            <h2>Connect With Me</h2>
-            <p>I'm always eager to connect with fellow professionals, discuss new challenges, and explore opportunities. Feel free to reach out!</p>
-            <ul>
-                <li><a href="contact.html" class="button-cta">Send a Message</a></li>
-                <li><a href="https://www.linkedin.com/in/your-linkedin-profile/" target="_blank" rel="noopener noreferrer" class="button-cta">Connect on LinkedIn</a></li>
-                <li><a href="https://github.com/your-github-profile" target="_blank" rel="noopener noreferrer" class="button-cta">See My GitHub</a></li>
-            </ul>
-        </section>
+    <h2>Connect With Me</h2>
+    <p>I'm always eager to connect with fellow professionals, discuss new challenges, and explore opportunities. Feel free to reach out!</p>
+    <ul>
+        <li><a href="contact.html" class="button-cta">Connect & Send a Message</a></li> <li><a href="cyberlab.html" class="button-cta">Explore Hexterika Cyberlab</a></li> </ul>
+</section>
     </main>
 
     <!-- Footer Section -->
