--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,34 @@
 
     <!-- Main Content (Grid Layout) -->
     <main>
+
+        <section class="bg-1">
+        <h1>Get In Touch</h1>
+        <p>I'm always eager to connect with fellow professionals, discuss new challenges, and explore opportunities. Please feel free to reach out via your preferred method below.</p>
+    </section>
+
+    <section class="bg-2">
+        <h2>Ways to Connect</h2>
+        <p>For direct inquiries, networking, or to view my projects, here are the best ways to reach me:</p>
+        <ul>
+            <li>
+                <a href="mailto:your-email@example.com" class="button-cta">Email Me Directly</a>
+                <p><strong>Best for:</strong> Professional inquiries, collaboration proposals, or specific questions about my experience.</p>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/your-linkedin-profile/" target="_blank" rel="noopener noreferrer" class="button-cta">Connect on LinkedIn</a>
+                <p><strong>Best for:</strong> Professional networking, direct messages regarding job opportunities, or industry discussions.</p>
+            </li>
+            <li>
+                <a href="https://github.com/your-github-profile" target="_blank" rel="noopener noreferrer" class="button-cta">Explore My GitHub</a>
+                <p><strong>Best for:</strong> Reviewing my code repositories, project write-ups, and cybersecurity lab documentation.</p>
+            </li>
+        </ul>
+        <p class="response-note">I strive to respond to all professional inquiries within 24-48 business hours.</p>
+        <p>Please remember to replace <code>your-linkedin-profile</code>, <code>your-github-profile</code>, and <code>your-email@example.com</code> with your actual links!</p>
+    </section>
+    
+        <!--Old-->
         <section class="bg-1">
             <h1>Contact</h1>
         </section>
