Link to the correct places at the bottom of the about.html

--- a/about.html
+++ b/about.html
@@ -76,11 +76,16 @@
         </section>
 
         <section class="bg-2">
-    <h2>Connect With Me</h2>
-    <p>I'm always eager to connect with fellow professionals, discuss new challenges, and explore opportunities. Feel free to reach out!</p>
-    <ul>
-        <li><a href="contact.html" class="button-cta">Connect & Send a Message</a></li> <li><a href="cyberlab.html" class="button-cta">Explore Hexterika Cyberlab</a></li> </ul>
-</section>
+            <h2>Connect With Me</h2>
+            <p>I'm always eager to connect with fellow professionals, discuss new challenges, and explore opportunities. Feel free to reach out!</p>
+            <ul>
+                <li><a href="contact.html" class="button-cta">Connect & Send a Message</a></li>
+                <li><a href="cyberlab.html" class="button-cta">Explore Hexterika Cyberlab</a></li>
+                <li><a href="skills.html" class="button-cta">View My Full Skills List</a></li>
+                <li><a href="designer.html" class="button-cta">View Design Portfolio</a></li>
+                <li><a href="certs.html" class="button-cta">See All Certifications</a></li>
+            </ul>
+        </section>
     </main>
 
     <!-- Footer Section -->
